--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,9 +4,11 @@ main {
   align-items: center;
   justify-content: center;
   background-color: #fffeee;
+  width: 100%;
 
   & .main__content {
     text-align: center;
+    width: 100%;
 
     & header {
       & h1 {
@@ -21,22 +23,80 @@ main {
     }
 
     & section {
-      & button {
-        all: unset;
-        background-color: orangered;
-        color: white;
-        padding: 1rem 1.5rem;
-        font-weight: 600;
-        border-radius: 2rem;
-        cursor: pointer;
+      display: flex;
+      flex-direction: column;
 
-        &:hover {
-          background-color: rgb(202, 54, 0);
+      & .main__row {
+        & button {
+          all: unset;
+          background-color: orangered;
+          color: white;
+          padding: 1rem 1.5rem;
+          font-weight: 600;
+          border-radius: 2rem;
+          cursor: pointer;
+
+          &.button__recording {
+            animation: pulse 1s infinite;
+
+            @keyframes pulse {
+              0% {
+                transform: scale(0.95);
+                box-shadow: 0 0 0 0 rgba(202, 54, 0, 0.7);
+              }
+
+              70% {
+                transform: scale(1.1);
+                box-shadow: 0 0 0 10px rgba(202, 54, 0, 0);
+              }
+
+              100% {
+                transform: scale(0.95);
+                box-shadow: 0 0 0 0 rgba(202, 54, 0, 0);
+              }
+            }
+          }
         }
       }
 
       & .main__text {
-        margin: 2rem 0 1rem 0;
+        padding: 0 1rem;
+
+        & .main__transcript {
+          padding: 1.25rem;
+          margin: 1.5rem 0;
+          width: 100%;
+          max-width: 500px;
+          height: 250px;
+          border: 2px solid orangered;
+          resize: none;
+          border-radius: 1rem;
+
+          &:focus {
+            outline: none;
+            border: 2px solid rgb(177, 47, 0);
+          }
+        }
+      }
+
+      & .main__actions {
+        & button {
+          all: unset;
+          background-color: transparent;
+          border: 2px solid orangered;
+          color: orangered;
+          font-weight: 600;
+          padding: 0.5rem 1rem;
+          border-radius: 2rem;
+          width: 8rem;
+          margin: 0 0.5rem;
+          cursor: pointer;
+
+          &:hover,
+          &:focus {
+            background-color: #fffddb;
+          }
+        }
       }
     }
   }
